# mnistV1

./: .gitignore  adapter.py  backbone.py  data_module.py  head.py  loss_function.py  model.py  pyproject.toml  task.py  train.py
configs/: config.yaml
configs/data_module/: mnist_module.yaml
configs/task/: mnist_classification.yaml
configs/task/loss_function/: cross_entropy.yaml
configs/task/model/: mnist_model.yaml
configs/task/model/adapter/: linear_adapter.yaml
configs/task/model/backbone/: resnet18.yaml  resnet34.yaml  resnet50.yaml
configs/task/model/head/: identity_head.yaml
configs/trainer/: cpu.yaml  gpu.yaml
tb_logs/mnist/version_0/: events.out.tfevents.1744373693.spc.750244.0
tb_logs/mnist/version_1/: events.out.tfevents.1744373816.spc.752440.0
tb_logs/mnist/version_2/: events.out.tfevents.1744374321.spc.757530.0
tb_logs/mnist/version_3/: events.out.tfevents.1744375591.spc.770041.0
